--- a/Copytext _231129_184603.html
+++ b/Copytext _231129_184603.html
@@ -10,7 +10,7 @@
 
     <script>
         function copyToClipboard() {
-            const textToCopy = "Your text goes here";
+            const textToCopy = "12-3072-0578040-00";
             navigator.clipboard.writeText(textToCopy)
                 .then(() => alert('Text copied to clipboard'))
                 .catch(err => console.error('Unable to copy text', err));
